# slurm

./: .gitignore  configure  configure.ac
src/plugins/gpu/generic/: gpu_generic.c
src/plugins/gpu/nvml/: gpu_nvml.c
src/plugins/sched/: Makefile.am  Makefile.in
src/plugins/sched/alex/: Makefile.am  Makefile.in  alex.c  alex.h  alex_wrapper.c
src/slurmctld/: node_mgr.c  node_scheduler.c  power_save.c
